# Physic-Engine-Charlotte

./: .gitignore  CMakeLists.txt  README.md
dependencies/Eigen/: Cholesky  CholmodSupport  Core  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  KLUSupport  LU  MetisSupport  OrderingMethods  PaStiXSupport  PardisoSupport  QR  SPQRSupport  SVD  Sparse  SparseCholesky  SparseCore  SparseQR  SuperLUSupport  UmfPackSupport
dependencies/Eigen/src/Cholesky/: LLT.h
dependencies/Eigen/src/Core/: Array.h  DenseBase.h  IndexedView.h  Matrix.h  MatrixBase.h  PlainObjectBase.h  VectorwiseOp.h
dependencies/Eigen/src/Core/products/: GeneralBlockPanelKernel.h
dependencies/Eigen/src/Core/util/: ConfigureVectorization.h  MKL_support.h  Macros.h
dependencies/Eigen/src/Geometry/: Transform.h  Umeyama.h
dependencies/Eigen/src/LU/: FullPivLU.h  PartialPivLU.h
dependencies/Eigen/src/MetisSupport/: MetisSupport.h
dependencies/Eigen/src/QR/: ColPivHouseholderQR.h  FullPivHouseholderQR.h  HouseholderQR.h
dependencies/Eigen/src/SparseCore/: SparseMatrix.h
dependencies/Eigen/src/SparseQR/: SparseQR.h
dependencies/Eigen/src/plugins/: ArrayCwiseBinaryOps.h  MatrixCwiseUnaryOps.h  ReshapedMethods.h
dependencies/GLFW/: glfw3.h  glfw3native.h
dependencies/KHR/: khrplatform.h
dependencies/glad/: glad.h
dependencies/glm/detail/: compute_vector_relational.hpp  func_matrix.inl
dependencies/glm/gtx/: compatibility.hpp
include/: ClassParticle.hpp  ClassPhysic.hpp  ClassTriangle.hpp  Joint.hpp  Particle.hpp  Physic.hpp  Triangle.hpp  common.hpp
include/Constraints/: BendingConstraint.hpp  ClassConstraint.hpp  ClassRigidBodyColConstraint.hpp  ClassStretchingConstraint.hpp  RigidBodyColConstraint.hpp  StretchingConstraint.hpp
include/Engine/: Physic.hpp  Renderer.hpp  Shader.hpp
include/OPENGL/: Camera.hpp  Renderer.hpp  shaderClass.hpp
include/Objects/: ClassCloth.hpp  ClassObject.hpp  ClassWall.hpp  Cloth.hpp  Cube.hpp  Object.hpp  Wall.hpp
shaders/: fragmentShader.fs  vertexShader.vs
src/: BendingConstraint.cpp  Cloth.cpp  Cube.cpp  Joint.cpp  Object.cpp  Particle.cpp  Physic.cpp  Renderer.cpp  RigidBodyColConstraint.cpp  StretchingConstraint.cpp  cameraClass.h  cameraClass.hpp  glad.c  includeHeader.hpp  main.cpp  objectClass.hpp  particleClass.h  particleClass.hpp  physicClass.h  physicClass.hpp  shaderClass.h  shaderClass.hpp
